After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726271 - Items not highlighted while mouse-hovered
Items not highlighted while mouse-hovered
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkIconView
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-13 19:08 UTC by Bogdan Petcu
Modified: 2014-04-14 05:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
iconhelper: always ensure a stated pixbuf (1.79 KB, patch)
2014-04-11 21:20 UTC, Cosimo Cecchi
none Details | Review
iconhelper: always ensure a stated pixbuf (1.79 KB, patch)
2014-04-11 21:42 UTC, Cosimo Cecchi
committed Details | Review

Description Bogdan Petcu 2014-03-13 19:08:35 UTC
I was trying to fix a problem on Evince Bookshelf/Recent-view (branch wip/recent-view) regarding item highlighting on mouse hover which was not happening. I discovered that the follow-state was not set, so I set it ( http://pastebin.com/93eSC1AM or http://pastebin.com/5HTUqcAf ), but none of these worked. Taking a look in the gtk+ tests at testiconview.c I noticed that although the follow-state was set here the icons in the testiconview window were also not highlighted on mouse hover.

This seems to be a problem from gtk+.
Comment 1 Cosimo Cecchi 2014-04-11 21:20:52 UTC
Created attachment 274134 [details] [review]
iconhelper: always ensure a stated pixbuf

Even when we are set a pixbuf itself.
Comment 2 Cosimo Cecchi 2014-04-11 21:21:43 UTC
I wrote this patch a long time ago, but I haven't tested whether it still works.
Attaching it here for reference and testing.
Comment 3 Cosimo Cecchi 2014-04-11 21:42:18 UTC
Created attachment 274135 [details] [review]
iconhelper: always ensure a stated pixbuf

--

This one is tested and works.
Comment 4 Matthias Clasen 2014-04-14 05:35:41 UTC
Attachment 274135 [details] pushed as b0a0b7e - iconhelper: always ensure a stated pixbuf