iconhelper: always ensure a stated pixbuf

Even when we are set a pixbuf itself.

https://bugzilla.gnome.org/show_bug.cgi?id=726271